syntax = "proto3";
option go_package = "flow";

package withtheflow.flow;

import "google/protobuf/timestamp.proto";

message FlowConfig {
    int64 id = 1;
    int64 parent_id = 2;
    repeated int64 dependent_ids = 9;
    bool DelayedResult = 10;
    string name = 3;
    string description = 4;
    bytes data = 5;
    bytes result = 6;
    google.protobuf.Timestamp creation_time = 7;
    google.protobuf.Timestamp completion_time = 8;
}

message BlockedFlow {
    repeated int64 blocked_id = 1;
    FlowConfig flow = 2;
}

message WorkflowState {
    repeated FlowConfig scheduled = 1;
    repeated BlockedFlow blocked = 2;
    repeated FlowConfig completed = 3;
}